Users can stop tracking habits without deleting them by making them inactive.
Merge "Track" and "Stats" habit views into a single page.
User can now write a plan for when exactly they will do the habit so they are more likely to stick with it.
Hovering over the consistency displays how often the user skips that habit.
User can see session duration while editing session end time.
Added "Buid habits" article to the "Info" page.
1729829282066
Users can now edit and reorder habits right from the "Track" and "Stats" views on the "Habits" page.
User can reset a specific habit from the "Edit" view of a habit.
Every "Tasks" sub-page now has an "Add" button
Users can turn an existing task into a template and templates are now always available when creating or editing tasks.
It's more comfortable to set a weekly goal for a project
Added "Time tracking" and "Taks Management" articles to the "Info" page
1729225980085
Users connect goals to their habits by either adding new habits from the goal view or picking an existing habit.
To help users remember to track their habits, a prompt appears in the sidebar navigation next to the "Habits" item. This prompt will show up if the user hasn't visited the "Habits" page that day.
Added a line to the weekly project report chart to display budgeted time for selected projects or total budgeted time for all projects.
Updated the projects page to display not only the emoji and name, but also the budget, goal, and "Mon-Fri" label for workday projects.
User can set project weekly budget and goal while creating or editing a project.
"Report" subpage was moved from "Projects" page to a dedicated "Timesheet" page for easier access.
1728708465131
Users can now expedite the creation of recurring tasks ahead of schedule by using the 'Create Now' button found in the 'Upcoming' tab of the 'Tasks' page.
Users can now see on the 'Upcoming' tab of the 'Tasks' page when their recurring task will actually be created.